--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -25,5 +25,7 @@ $pad-xs: 20px;
 $pad-xxs: 10px;
 
 $light-blue: #72e1f4;
+$dark-blue: #25cadc;
 $link-color: #7bd3e6;
+$text-color: #2a2c3d;
 $pink: #f3afd0;
