--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,9 +17,14 @@
 @import 'modules/forms';
 @import 'modules/buttons';
 @import 'modules/modals';
+@import 'modules/slider-ui';
+@import 'modules/waves';
+@import 'modules/page-title';
 @import 'modules/top-panel';
 @import 'modules/aside-panel';
 @import 'modules/footer';
 @import 'modules/big-slider';
+@import 'modules/work-places';
+@import 'modules/animators';
 
 @import 'pages/home';
