--- a/sass/modules/_big-slider.scss
+++ b/sass/modules/_big-slider.scss
@@ -1,6 +1,32 @@
 .big-slider-sec {}
 
-.big-slider {}
+.big-slider {
+	.slider-next, .slider-prev {
+		@include res(m) {
+			top: 25%;
+		}
+	}
+	.slider-dots {
+		position: absolute;
+		top: 160px;
+		left: 132px;
+		max-width: 510px;
+		@include res(xl) {
+			top: 90px;
+			left: 62px;
+		}
+		@include res(l) {
+			top: 60px;
+			left: 12px;
+		}
+		@include res(m) {
+			top: initial;
+			bottom: 25px;
+			left: 50%;
+			transform: translate3d(-50%,0,0);
+		}
+	}
+}
 
 .big-slide {
 	display: flex!important;
@@ -9,6 +35,7 @@
 	padding-top: 200px;
 	background-position: center center;
 	background-size: cover;
+	outline: none;
 	@include res(xl) {
 		padding-top: 140px;
 		min-height: 610px;
@@ -18,11 +45,25 @@
 		padding-top: 100px;
 	}
 	@include res(m) {
-		min-height: 380px;
-		padding-top: 80px;
+		min-height: initial;
+		padding-top: 0px;
+		background: $text-color;
+		background-image: none!important;
 	}
 	@include res(s) {
-		min-height: 280px;
+		//min-height: 280px;
+	}
+}
+
+.big-slide__img {
+	display: none;
+	@include res(m) {
+		display: block;
+		margin-left: -$gutter-mobile;
+		margin-right: -$gutter-mobile;
+	}
+	img {
+		max-width: 100%;
 	}
 }
 
@@ -33,10 +74,20 @@
 	text-align: center;
 	color: #fff;
 	@include res(xl) {
-		margin-left: 50px;
+		margin-left: 60px;
 	}
 	@include res(l) {
 		margin-left: 0px;
+		padding-left: 50px;
+	}
+	@include res(m) {
+		margin: $pad-xs auto $pad-s;
+		padding-left: 0;
+	}
+	.h1 {
+		@include res(xs) {
+			font-size: 20px;
+		}
 	}
 }
 
@@ -51,56 +102,3 @@
 	}
 }
 
-.big-slider-dots {
-	position: absolute;
-	top: 160px;
-	left: 132px;
-	width: 100%;
-	max-width: 510px;
-	display: flex;
-	justify-content: center;
-	@include res(xl) {
-		top: 90px;
-		left: 62px;
-	}
-	@include res(l) {
-		top: 60px;
-		left: 12px;
-	}
-	@include res(m) {
-		top: 40px;
-	}
-	li {
-		display: block;
-		width: 16px;
-		height: 16px;
-		margin-right: 12px;
-		border: 2px solid #fff;
-		border-radius: 50%;
-		cursor: pointer;
-		transition: all 0.3s ease;
-		background: #fff;
-		@include res(m) {
-			width: 14px;
-			height: 14px;
-			margin-right: 8px;
-		}
-		@include res(s) {
-			width: 12px;
-			height: 12px;
-		}
-		&:hover {
-			border-color: $pink;
-		}
-		button {
-			display: none;
-		}
-		&.slick-active {
-			border-color: $pink;
-			background: $pink;
-			&:hover {
-				border-color: $pink;
-			}
-		}
-	}
-}
