--- a/sass/main.scss
+++ b/sass/main.scss
@@ -26,5 +26,7 @@
 @import 'modules/big-slider';
 @import 'modules/work-places';
 @import 'modules/animators';
+@import 'modules/our-offers';
+@import 'modules/big-video';
 
 @import 'pages/home';
