--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -11,6 +11,11 @@ a {
 	text-decoration: none;
 }
 
+sup {
+	vertical-align: top;
+	font-size: small;
+}
+
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5 {
 	margin-bottom: 0.4em;
 	font-family: $font-head;
@@ -126,6 +131,12 @@ h5, .h5 {
 		margin-bottom: 15px;
 		&:last-child {
 			margin-bottom: 0;
+		}
+	}
+	&--mini {
+		font-size: 16px;
+		@include res(l) {
+			font-size: 14px;
 		}
 	}
 }
