--- a/sass/modules/_big-slider.scss
+++ b/sass/modules/_big-slider.scss
@@ -102,3 +102,83 @@
 	}
 }
 
+.video-play {
+	position: relative;
+	display: block;
+	width: 100px;
+	height: 135px;
+	@include res(l) {
+		width: 85px;
+		height: 115px;
+	}
+	@include res(s) {
+		width: 60px;
+		height: 80px;
+	}
+	&:hover {
+		&:before {
+			transform: translate3d(-50%,-50%,0) scale(1.2) rotate(15deg);
+		}
+		&:after {
+			transform: translate3d(-50%,-50%,0) scale(1.15) rotate(-65deg);
+		}
+	}
+	&:before {
+		content: '';
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		width: 100px;
+		height: 135px;
+		background: url('../img/big-slider/play-wave-pink.svg') no-repeat center center;
+		transition: all 0.3s ease;
+		transform: translate3d(-50%,-50%,0);
+		z-index: 0;
+		@include res(l) {
+			width: 85px;
+			height: 115px;
+			background-size: contain;
+		}
+		@include res(s) {
+			width: 60px;
+			height: 80px;
+			background-size: contain;
+		}
+	}
+	&:after {
+		content: '';
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		width: 115px;
+		height: 104px;
+		background: url('../img/big-slider/play-wave-blue.svg') no-repeat center center;
+		transition: all 0.3s ease;
+		transform: translate3d(-50%,-50%,0);
+		z-index: 0;
+		@include res(l) {
+			width: 95px;
+			height: 86px;
+			background-size: contain;
+		}
+		@include res(s) {
+			width: 70px;
+			height: 63px;
+			background-size: contain;
+		}
+	}
+	i {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		font-size: 38px;
+		transform: translate3d(-50%,-50%,0);
+		z-index: 2;
+		@include res(l) {
+			font-size: 34px;
+		}
+		@include res(s) {
+			font-size: 30px;
+		}
+	}
+}
