--- a/sass/main.scss
+++ b/sass/main.scss
@@ -28,5 +28,7 @@
 @import 'modules/animators';
 @import 'modules/our-offers';
 @import 'modules/big-video';
+@import 'modules/additions';
+@import 'modules/video-slider';
 
 @import 'pages/home';
