--- a/sass/modules/_big-slider.scss
+++ b/sass/modules/_big-slider.scss
@@ -120,7 +120,7 @@
 			transform: translate3d(-50%,-50%,0) scale(1.2) rotate(15deg);
 		}
 		&:after {
-			transform: translate3d(-50%,-50%,0) scale(1.15) rotate(-65deg);
+			transform: translate3d(-50%,-50%,0) scale(0.85) rotate(10deg) skew(-20deg,0deg);
 		}
 	}
 	&:before {
